automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -40,8 +40,8 @@
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "\n",
-    "r = requests.get('https://www.residentadvisor.net/events')\n",
+    "https://www.residentadvisor.net/events\n",
+    "r = requests.get('')\n",
     "c = r.content\n",
     "soup = BeautifulSoup(c, 'html.parser')"
    ]
